--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,36 @@ body {
     margin: 0;
     width: 100%;
   }
+
+  .win, .fail{
+    position: absolute;
+    display: grid;
+    height: 20%;
+    top: 20%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    
+  }
+
+  .win{
+    background-color: rgb(81, 148, 187);
+  }
+  .fail{
+    background-color: rgb(187 81 115);
+  }
+
+  #failRestart, #winRestart{
+    width: 100%;
+  }
+  .mess{
+    font-size: 32px;
+    text-align: center;
+  }
+
+  .inactive{
+    display: none;
+  }
   
   @media (max-width: 440px) {
     button { margin-top: 25px; }
